force-app/main/default/objects/DisclosureLineItem__c/DisclosureLineItem__c.object-meta.xml
<CustomObject>
    <description
  >Junction object for disclosure template and disclosure consent</description>
    <label>Disclosure Line Item</label>
    <nameField>
        <label>Disclosure Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disclosure Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>