force-app/main/default/objects/DisclosureLineItem__c/fields/DisclosureTemplate__c.field-meta.xml
<CustomField>
    <fullName>DisclosureTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to templates</description>
    <label>Disclosure Template</label>
    <referenceTo>DisclosureTemplate__c</referenceTo>
    <relationshipLabel>Disclosure Line Items</relationshipLabel>
    <relationshipName>DisclosureLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>