force-app/main/default/objects/DisclosureLineItem__c/fields/IsSignatureRequired__c.field-meta.xml
<CustomField>
    <fullName>IsSignatureRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>true if signature is required</description>
    <label>IsSignatureRequired</label>
    <type>Checkbox</type>
</CustomField>